2002-01-29 olicha  <olivier.chapuis@free.fr>

	* mod_f2m_communication.html:
	Documented the MX_PROPERTY_CHANGE and MX_VISIBLE* messages

	* mod_initialization.html:
	Say a word on the MX_PROPERTY_CHANGE message in the Transparent section,
	also replace root by parent in one place

2002-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.5 and 2.5.0

2002-01-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_m2f_communication.html:
	* mod_f2m_communication.html:
	documented new message types and new message interface

2002-01-12  Dan Espen  <dane@mk.telcordia.com>

	* developers.html: Link to bug downloads.
	* downloadbugs.html: Add page with links for downloading bug reports.

2002-01-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* icons.html:
	Updated

2001-12-18  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Typos.

2001-12-17  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html:
	* Tenebrae.fvwm2rc: Added Tenabrae's config file.

2001-12-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.4

2001-12-07  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html:
	* links.html: Clarify that FVWM questions are best answered when asked
	at fvwm@fvwm.org.
	Link to Glen Lee Edwards excellent page.

2001-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-cats/index.html:
	no comment

2001-11-21  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot, fvwm2rc from Filip Hroch.

2001-11-07  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot from J G A van Riswick.

2001-10-13  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/*.html:
	regenerated man pages

2001-10-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.3

2001-09-28  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/index.html: Screenshot from Christian Lyra.