@@ -355,13 +355,11 @@ All packets are sent in response to a Send_WindowList request from a module.
 <a name="M_VISIBLE_NAME"></a><a name="MX_VISIBLE_ICON_NAME"></a>
 MX_VISIBLE_NAME, MX_VISIBLE_ICON_NAME
 </h2>
-<!needs_lang_check>
 These packets are similar to the M_WINDOW_NAME and M_ICON_NAME packets
 (respectively). The difference is that they contain the window and
-icon title that fvwm2 really displays (which may be differrent than the
-Window name and the Icon name if the IndexedWindowName and IndexeIconName
+icon title that fvwm2 displays (which may be differrent than the
+Window name and the Icon name if the IndexedWindowName and IndexedIconName
 fvwm2 styles are used).
-<!end>
 
 <h2>
 <a name="M_END_WINDOWLIST"></a>
@@ -481,30 +479,33 @@ same type for the same window may be sent at any time.
 MX_PROPERTY_CHANGE
 </h2>
 <!needs_lang_check>
-This packet is an all propose message. It contains 3 values followed by a
+This packet is an all purpose message. It contains 3 values followed by a
 variable length character string. The first value is the type of the
-message, the others values depands on this type. The current types are:
+message, the others values depend on the message type. The message types are:
 <b>MX_PROPERTY_CHANGE_BACKGROUND</b> and <b>MX_PROPERTY_CHANGE_SWALLOW</b>.
-
-<b>MX_PROPERTY_CHANGE_BACKGROUND</b> is send by fvwm2 and FvwmButtons (and
-maybe others modules) to indicate a background change. If the 3rd value
-is 0, then it means that the root background change (fvwm2 send such message
-when it detects such a change). If the 3rd value is not zero it is the id
-of the module which should be concerned by the message and this indicate that
+<p>
+<b>MX_PROPERTY_CHANGE_BACKGROUND</b> is sent by fvwm2 and FvwmButtons (and
+maybe other modules) to indicate a background change. If the 3rd value
+is 0, it means that the root background changed. (fvwm2 sends this message
+when it detects the change).
+<!dont understand>
+If the 3rd value is not zero it is the id
+of the module which should be concerned by the message and this indicates that
 the parent(s) window background of this module has changed (FvwmButtons
 send this message for the modules that it swallows, when its background
-colorset change). The string and the second value are not used.
+colorset changes). 
+<!end dont understand>
+The string and the second value are not used.
 <br><br>
-<b>MX_PROPERTY_CHANGE_SWALLOW</b> is send by FvwmButtons (and
-maybe others modules) to indicate that the module with the id given by the
+<b>MX_PROPERTY_CHANGE_SWALLOW</b> is sent by FvwmButtons (and
+maybe other modules) to indicate that the module with the id given by the
 3rd value has been swallowed or unswallowed. It is a swallowed message
 if the 2nd value is 1 and it is an unswallowed message if the 2nd value is 0.
 The string is not used.
 <br><br>
-There is a fvwm2 command which allows modules to send such message:
+There is a fvwm2 command which causes modules to send such message:
 <br><br>
 <b>PropertyChange</b> 1st_value 2nd_value 3rd_value "string"
-<!end>
 
 <p>
 <hr>
