@@ -1,3 +1,8 @@
+2002-02-01  Dan Espen  <dane@mk.telcordia.com>
+
+	* mod_f2m_communication.html: Language fix.
+	* mod_initialization.html: Language fix.
+
 2002-01-29 olicha  <olivier.chapuis@free.fr>
 
 	* mod_f2m_communication.html:
